# liars-dice

./: .Justfile  .commitlintrc.mjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  leaderboard.yaml  pyproject.toml  season_summary.md  test_lb.yaml  test_security.py  test_smith_violation.py
.github/scripts/: detect_phase.py  evaluate.py  reset_season.py  run_season.py
.github/workflows/: liars-dice.yml  release.yml  run-season.yml  (+1 more)
examples/: always_bid_two_fives.py  crashes_at_import.py  hangs_forever.py  hangs_in_c.py  isolation_parity_liar_caller.py  reads_env_secret.py  reports_readmodel_lengths.py  reports_stats_view.py  reports_stats_view_v1.py
game/: __main__.py  validate.py
players/: agent_smith.py  alice.py  bruno.py  calculated.py  cleo.py  columbo.py  deepthought.py  diego.py  eva.py  evilstewie.py  finn.py  hal.py  honestabe.py  littlefinger.py  merovingian.py  nuke.py  oracle.py  peterbeter.py  petergriffin.py  remy.py  rick.py  ripley.py  shwimpevwild.py  topper.py  varys.py
tests/: test_isolation_confinement.py  test_isolation_env.py  test_isolation_orchestrator_parity.py  test_isolation_pool.py  test_isolation_protocol.py  test_isolation_readmodel.py  test_isolation_rng.py  test_isolation_series_parity.py  test_isolation_stats_parity.py  test_isolation_worker.py  test_leaderboard.py  test_main.py  test_replay_engine.py  test_reset_season.py  test_run_season.py  test_season_utils.py  test_security.py  test_stats.py  test_tui_widgets.py  test_utils_isolated_loader.py  test_validate_isolated_probe.py  test_validate_player.py
(+20 files in other folders)
