[project]
name = "liars-dice"
version = "2.1.0"
requires-python = ">=3.11"
dependencies = ["pandas", "pyyaml", "rich", "textual>=1.0"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.15"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]                # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["player_tests"]
pythonpath = ["."]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "style", "test", "docs", "build", "ci", "chore", "revert", "player", "doh"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
mode = "init"
template_dir = ".semrel"
exclude_commit_patterns = [
    "^doh(\\([^)]*\\))?!?:",
    "^player(\\([^)]*\\))?!?:",
    "^ci:.*\\[skip ci\\]",
]
